implemented sprites, renamed and restructured a lot of things + small changes all around